@startuml OrgaVue

class IHM {

}

abstract class Vue {

}

interface AfficheurFiche {

}

class PopUpOpenFiche {

}

Vue --o "4" IHM


Welcome --|> Vue
Edition --|> Vue
Consultation --|> Vue
Reviser --|> Vue
Editeur --> Edition
MenuLateral --> Edition
MenuLateral --> Consultation
MenuLateral --> Reviser
AfficheurFiche ..|> Reviser
Reviser --> PopUpOpenFiche
AfficheurFiche <.. PopUpOpenFiche

note "Interface de marquage permettant \nd'utiliser PopUpOpenFiche" as N1

N1 .. AfficheurFiche